--- a/main.html
+++ b/main.html
@@ -14,6 +14,7 @@
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script src="functions.js"></script>
+
     <!-- End of import modules -->
     <!-- End of meta data -->
     <title>Password manager</title>
@@ -43,6 +44,7 @@
         <div id="credential-block">
             <div id="credential-list"></div>
             <script type="module" src="loadcreds.js"></script>
+            <script type="module" src="edit.js"></script>
         </div>
         <div id="search-results"><br></div>
     </div>
